# pg_durable

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  Makefile  NOTICE  README.md  SUBORCHESTRATION_DESIGN.md  TODO.md  USER_GUIDE.md  build.rs  docker-compose.yml  fix.md  pg_durable.control
.devcontainer/: devcontainer.json  onCreateCommand.sh  postCreateCommand.sh
.github/: copilot-instructions.md
Sarat_scenarios/: 00_common_prerequisite.sql  01_autovacuum_blocked.sql  03_wraparound_risk.sql  04_tables_not_vacuumed.sql  README.md  SCENARIOS_DESIGN.md  pg_durable Extension.vtt
dashboard/: index.html  server.py
dashboard-v2/: index.html  server.py
docker-entrypoint-initdb.d/: 01-init-pg-durable.sh
docs/: ARCHITECTURE.md  CODESPACES_PREBUILDS.md  E2E_TESTING.md  LLM_MIGRATION_GUIDE.md  SCENARIOS.md  SPI-implementation-notes.md  SUB_ORCHESTRATION_FEATURE.md  TESTING.md  TEST_SPEC.md  api-reference.md  bgw-applies-migrations.md  bug-bash-april-2026.md  dep_issues.md  (+52 more)
durable-korvus/: ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md
durable-korvus/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  implementation_task.yml
durable-korvus/examples/: azure_openai.rs  basic_rag.rs  bulk_ingest.rs  custom_chunker.rs  metadata_filter.rs  migration_from_korvus.rs
durable-korvus/src/: chunker.rs  client.rs  collection.rs  document.rs  embeddings.rs  error.rs  lib.rs  pipeline.rs  schema.rs  search.rs  workflow.rs
duroxide-pg-opt/: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  STRESS_TEST_SUMMARY.md  TODO.md
duroxide-pg-opt/.github/: copilot-instructions.md
duroxide-pg-opt/docs/: ARCHITECTURE.md  LONGPOLL_DESIGN_SESSION.md  LONG_POLLING_DESIGN.md  ORION_PERFORMANCE_ANALYSIS.md  SLATEDB_AZURE_PROPOSAL.md  WORKER_VISIBLE_AT_PROPOSAL.md  dep_issues.md  provider-initialization.md  schema_migrations.md
duroxide-pg-opt/migrations/: 0002_diff.md  0003_diff.md  0004_diff.md  0005_diff.md  README.md
duroxide-pg-opt/perf_results/: lp-comp-2024-12-20-local.md  lp-comp-2024-12-20-remote-flex.md  lp-comp-2024-12-20-remote-horizondb.md
duroxide-pg-opt/pg-stress/: Cargo.toml  README.md  performance-results-duroxide-pg-westus.md  stress-test-results-duroxide-pg-westus.md  stress-test-results-duroxide-pg.md  stress-test-results-localhost.md
duroxide-pg-opt/pg-stress/src/: lib.rs
duroxide-pg-opt/prompts/: duroxide-pg-opt-check-upstream-fixes.md  duroxide-update-sync.md  longpoll-comparison.md  performance-analysis.md  release-workflow.md
duroxide-pg-opt/scripts/: cleanup_test_schemas.sh  generate_migration_diff.py  generate_migration_diff.sh  measure-server-performance.sh  run-all-extended-tests.sh  run-fault-injection-tests.sh  run-perf-tests.sh  run-stress-tests.sh  start-measurement.sh  stop-measurement.sh
duroxide-pg-opt/src/: db_metrics.rs  fault_injection.rs  lib.rs  migrations.rs  notifier.rs  provider.rs
duroxide-pg-opt/tests/: basic_tests.rs  continue_as_new_stress_tests.rs  db_metrics_tests.rs  e2e_samples.rs  fault_injection_tests.rs  longpoll_tests.rs  multi_node_tests.rs  perf_tests.rs  pg_listener_test.rs  postgres_provider_test.rs  provider_initialization_tests.rs  regression_tests.rs  session_e2e_tests.rs  stress_tests.rs  stress_tests_longpoll.rs
duroxide-pg-opt/tests/common/: mod.rs
(+310 files in other folders)
